new version available

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -6,7 +6,7 @@
     },
     {
       "versionName": "ver 0.1",
-      "versionNumber": "0.1.0.NEXT",
+      "versionNumber": "0.2.0.0",
       "path": "./force-app/main/default",
       "default": false,
       "package": "LWC UI Orchestrator",
@@ -19,6 +19,11 @@
   "sourceApiVersion": "58.0",
   "packageAliases": {
     "LWC UI Orchestrator": "0Hoam00000022ddCAA",
-    "LWC UI Orchestrator@0.1.0-1-master": "04tam000000iekvAAA"
+    "LWC UI Orchestrator@0.1.0-1-master": "04tam000000iekvAAA",
+    "LWC UI Orchestrator@0.1.0-2-master": "04tam000000ihm1AAA",
+    "LWC UI Orchestrator@0.1.0-3-master": "04tam000000ihndAAA",
+    "LWC UI Orchestrator@0.1.0-4-master": "04tam000000ihpFAAQ",
+    "LWC UI Orchestrator@0.1.0-master": "04tam000000ihqrAAA",
+    "LWC UI Orchestrator@0.2.0-master": "04tam000000ihsTAAQ"
   }
 }
