adding additional package versions

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -6,7 +6,7 @@
     },
     {
       "versionName": "ver 0.1",
-      "versionNumber": "0.8.0.0",
+      "versionNumber": "1.0.0.0",
       "path": "./force-app/main/default",
       "default": false,
       "package": "LWC UI Orchestrator",
@@ -31,6 +31,8 @@
     "LWC UI Orchestrator@0.6.0-master": "04tam000000imLtAAI",
     "LWC UI Orchestrator@0.6.1-master": "04tam000000imiTAAQ",
     "LWC UI Orchestrator@0.7.0-master": "04tam000000jEgLAAU",
-    "LWC UI Orchestrator@0.8.0-master": "04tam000000jFXZAA2"
+    "LWC UI Orchestrator@0.8.0-master": "04tam000000jFXZAA2",
+    "LWC UI Orchestrator@0.9.0-master": "04tam000000jG3pAAE",
+    "LWC UI Orchestrator@1.0.0-master": "04tam000000jG2DAAU"
   }
 }
