--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -6,7 +6,7 @@
     },
     {
       "versionName": "ver 0.1",
-      "versionNumber": "1.0.0.0",
+      "versionNumber": "1.1.1.0",
       "path": "./force-app/main/default",
       "default": false,
       "package": "LWC UI Orchestrator",
@@ -33,6 +33,7 @@
     "LWC UI Orchestrator@0.7.0-master": "04tam000000jEgLAAU",
     "LWC UI Orchestrator@0.8.0-master": "04tam000000jFXZAA2",
     "LWC UI Orchestrator@0.9.0-master": "04tam000000jG3pAAE",
-    "LWC UI Orchestrator@1.0.0-master": "04tam000000jG2DAAU"
+    "LWC UI Orchestrator@1.0.0-master": "04tam000000jG2DAAU",
+    "LWC UI Orchestrator@1.1.1-master": "04tam000000jGlNAAU"
   }
 }
