new managed version

--- a/managed.sfdx-project.json
+++ b/managed.sfdx-project.json
@@ -6,7 +6,7 @@
     },
     {
       "versionName": "ver 0.1",
-      "versionNumber": "0.2.0.1",
+      "versionNumber": "0.3.0.1",
       "path": "./force-app/main/default",
       "default": false,
       "ancestorVersion": "HIGHEST",
@@ -20,6 +20,7 @@
   "packageAliases": {
     "LWC UI Orchestrator Managed": "0Hoam00000023g9CAA",
     "LWC UI Orchestrator Managed@0.1.0-1": "04tam000000jOqzAAE",
-    "LWC UI Orchestrator Managed@0.2.0-1": "04tam000000jo2HAAQ"
+    "LWC UI Orchestrator Managed@0.2.0-1": "04tam000000jo2HAAQ",
+    "LWC UI Orchestrator Managed@0.3.0-1": "04tam000000jp1ZAAQ"
   }
 }
