--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -6,7 +6,7 @@
     },
     {
       "versionName": "ver 0.1",
-      "versionNumber": "0.5.0.1",
+      "versionNumber": "0.6.0.1",
       "path": "./force-app/main/default",
       "default": false,
       "ancestorVersion": "HIGHEST",
@@ -23,6 +23,7 @@
     "LWC UI Orchestrator Managed@0.2.0-1": "04tam000000jo2HAAQ",
     "LWC UI Orchestrator Managed@0.3.0-1": "04tam000000jp1ZAAQ",
     "LWC UI Orchestrator Managed@0.4.0-1": "04tam000000klyPAAQ",
-    "LWC UI Orchestrator Managed@0.5.0-1": "04tam000000l7E9AAI"
+    "LWC UI Orchestrator Managed@0.5.0-1": "04tam000000l7E9AAI",
+    "LWC UI Orchestrator Managed@0.6.0-1": "04tam000000l7ndAAA"
   }
 }
