--- a/managed.sfdx-project.json
+++ b/managed.sfdx-project.json
@@ -6,7 +6,7 @@
     },
     {
       "versionName": "ver 0.1",
-      "versionNumber": "0.3.0.1",
+      "versionNumber": "0.9.0.1",
       "path": "./force-app/main/default",
       "default": false,
       "ancestorVersion": "HIGHEST",
@@ -21,6 +21,13 @@
     "LWC UI Orchestrator Managed": "0Hoam00000023g9CAA",
     "LWC UI Orchestrator Managed@0.1.0-1": "04tam000000jOqzAAE",
     "LWC UI Orchestrator Managed@0.2.0-1": "04tam000000jo2HAAQ",
-    "LWC UI Orchestrator Managed@0.3.0-1": "04tam000000jp1ZAAQ"
+    "LWC UI Orchestrator Managed@0.3.0-1": "04tam000000jp1ZAAQ",
+    "LWC UI Orchestrator Managed@0.4.0-1": "04tam000000klyPAAQ",
+    "LWC UI Orchestrator Managed@0.5.0-1": "04tam000000l7E9AAI",
+    "LWC UI Orchestrator Managed@0.6.0-1": "04tam000000l7ndAAA",
+    "LWC UI Orchestrator Managed@0.7.0-1": "04tam000000l9B7AAI",
+    "LWC UI Orchestrator Managed@0.8.0-1": "04tam000000l9MPAAY",
+    "LWC UI Orchestrator Managed@0.9.0": "04tam000000lfPVAAY",
+    "LWC UI Orchestrator Managed@0.9.0-1": "04tam000000lfanAAA"
   }
 }
